Update neo4j_5.20_ubi_9.3.sh