@@ -57,7 +57,7 @@ cd ${PACKAGE_NAME} && git checkout ${PACKAGE_VERSION}
 #Add hostname
 HOST=$(hostname)
 echo "127.0.0.1   $HOST" >> /etc/hosts
-
+export JAVA_OPTS="-Xms2048M -Xmx4096M -XX:MaxPermSize=4096M"
 #Build and test
 export MAVEN_OPTS="-Xmx4096m"
 #Build
@@ -69,7 +69,7 @@ if !  mvn clean install -DskipTests  ; then
 fi 
 
 # Tests 
-if ! mvn clean install -Dlog4j2.disable.jmx=true  -Dlog4j.configurationFile="/tmp/log" ; then
+if ! mvn test -Dlog4j2.disable.jmx=true  -Dlog4j.configurationFile="/tmp/log" ; then
     echo "------------------$PACKAGE_NAME::Build_and_Test_fails-------------------------"
     echo "$PACKAGE_URL $PACKAGE_NAME"
     echo "$PACKAGE_NAME  |  $PACKAGE_URL | $PACKAGE_VERSION | $OS_NAME | GitHub  | Fail|  Build_and_Test_fails"
